--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <a href="test.html"></a>
 </head>
 <body>
-    <header>
-        <p>Hello, world!</p>
-        <nav>Меню сайта</nav>
-        <nav>Контакты</nav>
-        <p class="main-text">Самый лучший курс по разработке</p>
-    </header>
+    <h1>Заголовок 1 уровня h1</h1>
+    <h2>Залоголовк 2 уровня h2</h2>
+    <h3>Заголовок 3 уровня h3</h3>
+    <h4>Заголовок 4 уровня h4</h4>
+    <h5>Заголовок 5 уровня h5</h5>
+    <h6>Заголовок 6 уровня h6</h6>
 </body>
 </html>
