--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href="test.html"></a>
 </head>
 <body>
-    <h1>Заголовок 1 уровня h1</h1>
+    <h1 align ="center">Заголовок 1 уровня h1</h1>
     <h2>Залоголовк 2 уровня h2</h2>
     <h3>Заголовок 3 уровня h3</h3>
     <h4>Заголовок 4 уровня h4</h4>
