--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <a href="test.html"></a>
 </head>
 <body>
-    <h1 align ="center">Заголовок 1 уровня h1</h1>
-    <h2>Залоголовк 2 уровня h2</h2>
-    <h3>Заголовок 3 уровня h3</h3>
-    <h4>Заголовок 4 уровня h4</h4>
-    <h5>Заголовок 5 уровня h5</h5>
-    <h6>Заголовок 6 уровня h6</h6>
+    <h4>Список покупок</h4>
+    <ul type="square">
+        <li>Хлеб - 2</li>
+        <li>Молоко - 1</li>
+        <li>Колбаса - 0,5</li>
+    </ul>
 </body>
 </html>
