--- a/list.html
+++ b/list.html
@@ -8,11 +8,20 @@
     <a href="test.html"></a>
 </head>
 <body>
+    <h2>Списки</h2>
+    <h3>Ненумерованный</h3>
     <h4>Список покупок</h4> 
     <ul type="square"> <!--Ненумерованный список ul, можно задать разные типы square - квадрат-->
         <li>Хлеб - 2</li> <!--Каждый элемент оборачивает в li -->
         <li>Молоко - 1</li>
         <li>Колбаса - 0,5</li>
     </ul>
+    <h3>Нумерованный</h3>
+    <h4>Список покупок</h4>
+    <ol>
+        <li>Хлеб - 2</li> <!--Каждый элемент оборачивает в li -->
+        <li>Молоко - 1</li>
+        <li>Колбаса - 0,5</li>
+    </ol>
 </body>
 </html>
