--- a/list.html
+++ b/list.html
@@ -11,17 +11,28 @@
     <h2>Списки</h2>
     <h3>Ненумерованный</h3>
     <h4>Список покупок</h4> 
-    <ul type="square"> <!--Ненумерованный список ul, можно задать разные типы square - квадрат-->
+    <ul type=""> <!--Ненумерованный список ul, можно задать разные типы square - квадрат, dics - залитый круг, circle - окружность-->
         <li>Хлеб - 2</li> <!--Каждый элемент оборачивает в li -->
         <li>Молоко - 1</li>
         <li>Колбаса - 0,5</li>
     </ul>
     <h3>Нумерованный</h3>
     <h4>Список покупок</h4>
-    <ol>
-        <li>Хлеб - 2</li> <!--Каждый элемент оборачивает в li -->
-        <li>Молоко - 1</li>
-        <li>Колбаса - 0,5</li>
+    <ol type="1"> <!--Нумерованный список-->
+        <li>Заголовки</li> <!--Каждый элемент оборачивает в li -->
+        <li>Абзацы</li>
+        <li>Списки
+            <ol type="A">
+                <li>Ненумерованный</li>
+                <li>Нумерованный</li>
+                <li>Вложенный
+                    <ul type="a">
+                        <li>1 порядка</li>
+                        <li>2 порядка</li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
     </ol>
 </body>
 </html>
